- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    5.9.2
 - 
    None
 
- 
        
 - 
        fe72571da885499739f723e054e1ba5433fb36e8
 
Steps:
- Create qmake project on macOS
 - Set TARGET in .pro file to a string with spaces, like TARGET = "Test App"
 - Build project
 - Open Info.plist in resulting .app package
 
Expected result: CFBundleIdentifier entry is "com.yourcompany.TestApp" (spaces removed)
Actual result: CFBundleIdentifier is "com.yourcompany.Test App" (space remains)
"The bundle ID string must be a uniform type identifier (UTI) that contains only alphanumeric (A-Z,a-z,0-9), hyphen (-), and period (.) characters" according to https://developer.apple.com/library/content/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html#//apple_ref/doc/uid/20001431-102070
This seems to happen both for provided and for generated .plist files.
| For Gerrit Dashboard: QTBUG-65477 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 215804,2 | qmake: replace invalid characters in generated bundle identifiers | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |